<resources>
    <string name="app_name">Your Data Stories</string>
    <string name="activityHomeTitle">Projects</string>
    <string name="activityCommentTitle">Comment</string>
    <string name="activityRateTitle">Rate</string>
    <string name="activityInfoTitle">Info</string>
    <string name="usernameLabel">Username</string>
    <string name="passwordLabel">Password</string>
    <string name="repeatPasswordLabel">Repeat Password</string>
    <string name="signInBtnText">Sign In</string>
    <string name="signUpBtnText">Sign Up</string>
    <string name="redirectToSignUpActivityText">Don\'t have an account?</string>
    <string name="redirectToSignInActivityText">Already have an account?</string>
    <string name="requiredFieldErrorMessage">This field is required</string>
    <string name="logout">Logout</string>
    <string name="splashText">Making sense of open government data and following public money</string>
    <string name="footerText">This project is co-funded by the European Union under Horizon 2020</string>
    <string name="actionShowList">Show list</string>
    <string name="actionShowMap">Show map</string>
    <string name="actionAdd">Submit</string>
    <string name="actionRate">Submit</string>
    <string name="actionClose">Close</string>
    <string name="info">This mobile app has been developed for the <a href="http://yourdatastories.eu/">YourDataStories</a> project which has received funding from the European Union’s Horizon 2020 research and innovation programme under grant agreement No 645886. YourDataStories mobile app aims to collect and upload primary content for public construction projects in a fast, reliable and contained fashion by demonstrating how interlinked public data can support transparency, empowering the citizen on mobile platforms, via crowdsourcing.
        \n\nYourDataStories asks your permission to access your location solely to provide information about the available public works and let you express your opinion on them. No storage or processing of your data shall be carried out. You may revoke your given permission at all times.
        \n\n<a href="http://platform.yourdatastories.eu/privacy-notice/">Privacy Policy</a>
    </string>
    <string name="notificationCloseProjectTitle">You are near project</string>
    <string name="notificationCloseProjectText">View details and leave a comment</string>


    <!-- Toast messages -->
    <string name="somethingWentWrong">Something went wrong</string>
    <string name="invalidCredentials">Your username or password is wrong</string>
    <string name="noInternetConnection">Check your internet connection</string>
    <string name="timeOut">The server doesn\'t respond</string>
    <string name="passwordAndConfirmDontMatch">Password and confirm are not the same</string>
    <string name="passwordVeryShort">Password must be at least 6 characters long</string>
    <string name="noAvailableProjects">No available projects</string>
    <string name="alreadyReacted">You have already reacted to this comment</string>
    <string name="usernameIsTaken">The username is already taken</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beneficiaryLabel">Beneficiary</string>
    <string name="completionOfPaymentsLabel">Completion (of Payments)</string>
    <string name="projectIdLabel">Project Id</string>
    <string name="budgetLabel">Budget</string>
    <string name="startDateLabel">Start Date</string>
    <string name="endDateLabel">End Date</string>
    <string name="rateBtnText">Rate it</string>
    <string name="seeAllCommentsBtnText">See all comments</string>
    <string name="addCommentHint">Add a public comment ...</string>
    <string name="commentsLabel">Comments:</string>

</resources>
