<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gr.atc.yds.activities.SignUpActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/usernameLabel"
            android:ems="10"
            android:id="@+id/activitySignUp_username" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/passwordLabel"
            android:ems="10"
            android:id="@+id/activitySignUp_password" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/repeatPasswordLabel"
            android:ems="10"
            android:id="@+id/activitySignUp_repeatPassword" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUpBtnText"
            android:id="@+id/activitySignUp_signUpBtn"
            android:layout_marginTop="20dp"
            style="@style/Widget.AppCompat.Button.Colored"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/redirectToSignInActivityText"
                android:id="@+id/redirectToSignInActivityTextView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/signInBtnText"
                android:id="@+id/activitySignUp_signInLink"
                android:layout_toRightOf="@id/redirectToSignInActivityTextView"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>

        </RelativeLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activitySignUp_progressBar"
            android:visibility="invisible"
            android:layout_margin="20dp"
            android:layout_gravity="center_horizontal"
            />

    </LinearLayout>

</RelativeLayout>


