<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gr.atc.yds.activities.SignInActivity"
    android:background="@drawable/img_background_splash">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageView"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/img_logo"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="37dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/img_logo_text"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/splashText"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:layout_marginBottom="30dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/usernameLabel"
            android:ems="10"
            android:id="@+id/activitySignIn_username"
            android:layout_marginBottom="10dp"
            style="@style/RoundedInput"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/passwordLabel"
            android:ems="10"
            android:id="@+id/activitySignIn_password"
            style="@style/RoundedInput" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signInBtnText"
            android:id="@+id/activitySignIn_signInBtn"
            android:layout_marginTop="20dp"
            style="@style/RoundedButton"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/redirectToSignUpActivityText"
                android:id="@+id/redirectToSignUpActivityTextView"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/signUpBtnText"
                android:id="@+id/activitySignIn_signUpLink"
                android:layout_toRightOf="@id/redirectToSignUpActivityTextView"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>

        </RelativeLayout>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/img_info"
            />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activitySignIn_progressBar"
            android:visibility="invisible"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            />

    </LinearLayout>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/euFlag"
        android:src="@drawable/img_flag_eu"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/footerText"
        android:textSize="11sp"
        android:textStyle="bold"
        android:layout_marginLeft="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/textView" />


</RelativeLayout>
