<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Map fragment -->
    <FrameLayout
        android:id="@+id/activityProject_mapFragment"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                android:id="@+id/activityProject_title"
                app:layout_constraintRight_toLeftOf="@+id/activityProject_collapseBtn"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="Κατασκευή οδικού τμήματος Ποτίδαιας - Κασσανδρείας"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginTop="11dp"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="17sp"
                android:textStyle="bold"/>

            <!-- Collapse btn -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_arrow_down"
                android:id="@+id/activityProject_collapseBtn"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="4dp"
                android:background="?attr/selectableItemBackground"/>

            <TextView
                android:text="Το έργο αφορά στην υλοποίηση εργασιών βελτίωσης (παρεμβάσεις ...)"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/activityProject_description"
                app:layout_constraintLeft_toLeftOf="@+id/activityProject_title"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/activityProject_title" />

        </android.support.constraint.ConstraintLayout>

        <!-- Beneficiary -->
        <RelativeLayout
            android:id="@+id/activityProject_beneficiaryRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_border_top"
            android:visibility="gone">

            <TextView
                android:id="@+id/beneficiaryLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beneficiaryLabel"
                style="@style/SmallLabel"/>

            <TextView
                android:id="@+id/activityProject_beneficiary"
                android:layout_below="@+id/beneficiaryLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ΕΓΝΑΤΙΑ ΟΔΟΣ ΑΕ"/>

        </RelativeLayout>

        <!-- Completion of payments -->
        <RelativeLayout
            android:id="@+id/activityProject_completionOfPaymentsRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_border_top"
            android:visibility="gone">

            <TextView
                android:id="@+id/completionOfPaymentsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/completionOfPaymentsLabel"
                style="@style/SmallLabel"/>

            <TextView
                android:id="@+id/activityProject_completionOfPayments"
                android:layout_below="@+id/completionOfPaymentsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="76"/>

        </RelativeLayout>

        <!-- Project Id -->
        <RelativeLayout
            android:id="@+id/activityProject_projectIdRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_border_top"
            android:visibility="gone">

            <TextView
                android:id="@+id/projectIdLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/projectIdLabel"
                style="@style/SmallLabel"/>

            <TextView
                android:id="@+id/activityProject_projectId"
                android:layout_below="@+id/projectIdLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="394834"/>

        </RelativeLayout>

        <!-- Start/end date -->
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_border_top">

            <TextView
                android:text="@string/startDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/startDateLabel"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                style="@style/SmallLabel"/>

            <TextView
                android:text="30/7/2011"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/activityProject_startDate"
                app:layout_constraintLeft_toLeftOf="@+id/startDateLabel"
                app:layout_constraintTop_toBottomOf="@+id/startDateLabel" />

            <TextView
                android:text="@string/endDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/endDateLabel"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/SmallLabel"/>

            <TextView
                android:text="31/12/2014"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/activityProject_endDate"
                app:layout_constraintRight_toRightOf="@+id/endDateLabel"
                app:layout_constraintTop_toBottomOf="@+id/endDateLabel" />
        </android.support.constraint.ConstraintLayout>

        <!-- Budget -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_border_top">

            <TextView
                android:id="@+id/budgetLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/budgetLabel"
                style="@style/SmallLabel"/>

            <TextView
                android:id="@+id/activityProject_budget"
                android:layout_below="@+id/budgetLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="14.500.243 €"/>

        </RelativeLayout>

        <!-- Rating -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/numOfRatinsRelativeLayout"
                android:layout_centerHorizontal="true">

                <TextView
                    android:text="Ratings:"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ratingsLabel"
                    style="@style/SmallLabel"/>

                <TextView
                    android:text="16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/activityProject_numOfRatings"
                    android:layout_toRightOf="@+id/ratingsLabel"
                    android:layout_marginLeft="2dp"
                    android:textStyle="bold"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ratingRelativeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/numOfRatinsRelativeLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp">


                <RatingBar
                    android:id="@+id/activityProject_ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:rating="3"
                    style="?android:attr/ratingBarStyleIndicator"
                    android:progressTint="@color/ratingBarColor"
                    android:progressBackgroundTint="@color/textLightColor"/>

                <TextView
                    android:id="@+id/activityProject_rating"
                    android:text="3,2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/activityProject_ratingBar"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="6dp"
                    android:textSize="22sp"
                    android:textStyle="bold"/>

            </RelativeLayout>

            <Button
                android:layout_below="@+id/ratingRelativeLayout"
                android:text="@string/rateBtnText"
                android:layout_centerHorizontal="true"
                android:layout_width="230dp"
                android:layout_marginTop="6dp"
                android:layout_height="wrap_content"
                android:id="@+id/activityProject_ratingBtn"
                style="@style/RoundedButton"/>


        </RelativeLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp">

            <!-- Number of comments -->
            <TextView
                android:text="@string/commentsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/commentsLabel"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:text="55"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fragmentComments_numOfComments"
                app:layout_constraintTop_toTopOf="@+id/commentsLabel"
                android:layout_marginStart="8dp"
                app:layout_constraintLeft_toRightOf="@+id/commentsLabel"
                android:layout_marginLeft="8dp" />

            <!-- Add new comment -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/commentsLabel"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/commentsLabel"
                app:layout_constraintRight_toRightOf="parent"
                android:weightSum="1"
                android:gravity="center_vertical"
                android:background="?attr/selectableItemBackground"
                android:id="@+id/newCommentView">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/img_add"
                    android:id="@+id/imageView2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/editText"
                    android:text="@string/addCommentHint"
                    android:background="@drawable/shape_border_bottom"
                    android:layout_marginLeft="10dp"
                    android:paddingBottom="7dp" />

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</LinearLayout>